# trs2junit

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  junit2jsonl  mkdebpkg.sh  setup.py  test_wrapper  trs2junit.py
example/: Makefile.am  configure.ac
example/src/: Makefile.am  main.c
example/tests/: 01-simple.sh  02-long.sh  03-error.sh  Makefile.am
tests/: .gitignore  01-simple.sh  02-long.sh  03-error.sh  Makefile.am  test_simple.c
