#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.71])
AC_INIT([trs2junit], [0.0.3], [ono.kojiro@gmail.com])
AC_CONFIG_AUX_DIR([config])

AM_INIT_AUTOMAKE([foreign subdir-objects])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
